# exotic-hashing

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  LICENSE.md  README.md  adaptive_learned_results.json  benchmark_results.json  bounded_adaptive_learned_results.json  build-debug.sh  build.sh  cleanup.py  compressed_rmirank_results.json  debug.sh  exotic_hashing.hpp  export.py  fst_lookup_results.json  fst_patch.json  gapped_10_results.json  lookup_results.json  mwhc_build_results.json  new_results.json  partial_results.json  results.json  rmirank_remeasure_results.json  rmirank_results.json  run.sh  setup.sh  test.sh  tmp_results.json  trie_results.json  unordered_build_results.json
docs/: functions.html  functions.md  index.html  results.csv
include/: adaptive_learned_mmphf.hpp  baseline.hpp  bitconverter.hpp  bitvector.hpp  compact_trie.hpp  elias.hpp  fast_succinct_trie.hpp  hollow_trie.hpp  learned_linear.hpp  mwhc.hpp  naive_baseline.hpp  rmi_rank.hpp  support.hpp  trie.hpp
include/convenience/: builtins.hpp
include/mmphf/: adaptive_learned_mmphf.hpp  compact_trie.hpp  fast_succinct_trie.hpp  hollow_trie.hpp  learned_linear.hpp  learned_rank.hpp  rank_hash.hpp  rmi_rank.hpp
include/mphf/: bbhash.hpp  ranked_bit_mwhc.hpp
include/mphf/recsplit/: recsplit.hpp
include/mphf/recsplit/src/: RecSplit.hpp
include/omphf/: mwhc.hpp
include/phf/: bit_mwhc.hpp  do_nothing_hash.hpp
include/recsplit/: recsplit.hpp
include/recsplit/src/: RecSplit.hpp
include/recsplit/src/support/: common.hpp
include/sf/: sf_mwhc.hpp
include/support/: bitconverter.hpp  bitvector.hpp  clustering.hpp  elias.hpp  elias_fano_list.hpp  support.hpp
include/trie/: compactedtrie.hpp
plots/: .gitignore  plots.ipynb
results/: export.py  readme.md  results.csv
src/: CMakeLists.txt  benchmarks.cpp  tests.cpp
src/support/: datasets.hpp  fixed_datasets.hpp  probing_set.hpp  string_datasets.hpp
src/tests/: adaptivelearnedmmphf-tests.hpp  bbhash-tests.hpp  bitmwhc-tests.hpp  bitvector-tests.hpp  clustering-tests.hpp  common.hpp  compactedcompacttrie-tests.hpp  compactedmwhc-tests.hpp  compacttrie-tests.hpp  compressedmwhc-tests.hpp  compressedsfmwhc-tests.hpp  elias-tests.hpp  eliasfanolist-tests.hpp  fst-tests.hpp  hollowtrie-tests.hpp  lavector-tests.hpp  learnedlinear-tests.hpp  learnedrank-tests.hpp  map-omphf-tests.hpp  mwhc-tests.hpp  rankedbitmwhc-tests.hpp  rankhash-tests.hpp  recsplit-tests.hpp  rmirank-tests.hpp  sfmwhc-tests.hpp
